# CoursePilot

./: .gitignore  Course-AI 学习工作台 重新设计.html  Course-AI 首页 重新设计.html  README.md
UI 重构/: lib-app.js  lib-dirs.css  lib-styles.css  wb-app.js  wb-styles.css  自适应课程库.html
course-ai/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  (+2 more)
course-ai/src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
course-ai/src-tauri/capabilities/: default.json
course-ai/src-tauri/icons/: icon.icns
course-ai/src-tauri/ios/: .gitignore  Package.swift
course-ai/src-tauri/ios/Sources/: MobileFilesPlugin.swift
course-ai/src-tauri/migrations/: 0001_initial.sql  0002_ai.sql  0003_slides.sql  0004_embeddings.sql  0005_summary.sql  0006_recycle.sql  0007_transcript_backups.sql  0008_subtitle.sql  0009_transcript_backups_source.sql  0010_crop.sql
course-ai/src-tauri/src/: db.rs  dev_log.rs  error.rs  export.rs  jobs.rs  lib.rs  main.rs  media_server.rs  mobile_files.rs  sidecar.rs  storage.rs
course-ai/src-tauri/src/commands/: ai.rs  courses.rs  export.rs  mod.rs  rag.rs  settings.rs  slides.rs  tools.rs  transcripts.rs  videos.rs  whisper.rs
course-ai/src-tauri/src/llm/: anthropic.rs  factory.rs  keychain.rs  mod.rs  openai.rs  profiles.rs  prompts.rs
course-ai/src-tauri/src/pipeline/: ai.rs  aliyun_asr.rs  aliyun_ocr.rs  asr.rs  audio.rs  crop_detect.rs  download.rs  mod.rs  ocr.rs  playable.rs  rag.rs  slides.rs  subtitle.rs  transcript_correction.rs  volcengine_asr.rs  volcengine_auc.rs
(+134 files in other folders)
